--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 <div class="row">
                     <div class="col text-center">
                         <div class="info">
-                            October 6 2018, New York
+                            October 6, 2018, New York
                         </div>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                 <div class="row justify-content-center">
                     <div class="col-10 text-center">
                         <div class="info">
-                            October 6 2018 4pm
+                            October 6, 2018 4pm
                         </div>
                         <div class="info">
                             China Blue, 135 Watts St. New York NY 10013
