--- a/index.html
+++ b/index.html
@@ -187,21 +187,21 @@
                 </div>
                 <div class="row justify-content-center ">
                     <div class="col-md-3 col-sm-3 text-center item ">
-                        <img src="img/adrian.jpg " alt=" ">
+                        <img src="img/adrian.jpg" alt=" ">
                         <span class="name">
                             Adrian
                         </span>
                         <span class="family-name name">Lin</span>
                     </div>
                     <div class="col-md-3 col-sm-3 text-center item ">
-                        <img src="img/cate.jpg " alt=" ">
+                        <img src="img/cate.jpg" alt=" ">
                         <span class="name ">
                             Cate
                         </span>
                         <span class="family-name name">Wang</span>
                     </div>
                     <div class="col-md-3 col-sm-3 text-center item ">
-                        <img src="img/corey.jpg " alt=" ">
+                        <img src="img/corey.jpg" alt=" ">
                         <span class="name ">
                             Corey
                         </span>
@@ -210,28 +210,28 @@
                 </div>
                 <div class="row justify-content-center ">
                     <div class="col-md-3 col-sm-3 text-center item ">
-                        <img src="img/img.jpg " alt=" ">
+                        <img src="img/img.jpg" alt=" ">
                         <span class="name ">
                             Jem
                         </span>
                         <span class="family-name name">Atlas</span>
                     </div>
                     <div class="col-md-3 col-sm-3 text-center item ">
-                        <img src="img/jonathan.jpg " alt=" ">
+                        <img src="img/jonathan.jpg" alt=" ">
                         <span class="name ">
                             Jonathan
                         </span>
                         <span class="family-name name">Zhang</span>
                     </div>
                     <div class="col-md-3 col-sm-3 text-center item ">
-                        <img src="img/patrick.jpg " alt=" ">
+                        <img src="img/patrick.jpg" alt=" ">
                         <span class="name ">
                             Patrick
                         </span>
                         <span class="family-name name">Coleman</span>
                     </div>
                     <div class="col-md-3 col-sm-3 text-center item ">
-                        <img src="img/siying.jpg " alt=" ">
+                        <img src="img/siying.JPG" alt=" ">
                         <span class="name ">
                             Siying
                         </span>
