--- a/index.html
+++ b/index.html
@@ -112,9 +112,9 @@
                         <div class="link">
                             <a href="https://www.google.com/maps/place/China+Blue/@40.7240204,-74.0121551,17z/data=!3m1!4b1!4m5!3m4!1s0x89c259f4798c3d43:0xd9fc6679f6bc07c8!8m2!3d40.7240204!4d-74.0099664" target="_blank">View map</a>
                         </div>
-                        <div class="link">
+                        <!-- <div class="link">
                             <a href="">View menu</a>
-                        </div>
+                        </div> -->
                     </div>
                 </div>
             </div>
@@ -262,7 +262,7 @@
                     </div>
                 </div>
                 <div class="footer text-center">
-                    created by Xintong & Daniel with <img src="img/emoji-7.png" alt="">
+                    created by xintong + daniel with <img src="img/emoji-7.png" alt="">
                 </div>
             </div>
         </div>
