--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 </div>
                 <div class="row">
                     <div class="col text-center">
-                        <a href="" class="rsvp">
+                        <a href="https://chen45.typeform.com/to/JN3mKR" target="_blank" class="rsvp">
                        RSVP
                     </a>
                     </div>
@@ -102,7 +102,7 @@
                 </div>
                 <div class="row">
                     <div class="col text-center">
-                        <a href="" class="rsvp">
+                        <a href="https://chen45.typeform.com/to/JN3mKR" target="_blank" class="rsvp">
                             RSVP
                         </a>
                     </div>
