--- a/index.html
+++ b/index.html
@@ -94,17 +94,9 @@
                     <div class="col-10 text-center">
                         <div class="info">
                             October 6, 2018 4pm
-                        </div>
-                        <div class="info">
+                        <br>
                             China Blue, 135 Watts St. New York NY 10013
                         </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col text-center">
-                        <a href="https://chen45.typeform.com/to/JN3mKR" target="_blank" class="rsvp">
-                            RSVP
-                        </a>
                     </div>
                 </div>
                 <div class="row">
@@ -117,6 +109,18 @@
                         </div> -->
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-12 text-center">
+                        <a href="https://chen45.typeform.com/to/JN3mKR" target="_blank" class="rsvp">
+                            RSVP
+                        </a>
+                    </div>
+                
+                     <div class="col-12 text-center">
+                        <p class="reminder">Kindly reply by May 20th</p>
+                    </div>
+                </div>
+                
             </div>
         </div>
         <div class="section details">
@@ -210,8 +214,8 @@
                 </div>
                 <div class="row justify-content-center ">
                     <div class="col-md-3 col-sm-3 text-center item ">
-                        <img src="img/img.jpg" alt=" ">
-                        <span class="name ">
+                        <img src="img/jem.jpeg" alt=" ">
+                        <span class="name">
                             Jem
                         </span>
                         <span class="family-name name">Atlas</span>
