--- a/index.html
+++ b/index.html
@@ -24,13 +24,13 @@
             <div class="container">
                 <div class="row title-row">
                     <div class="col text-center">
-                        <div class="big-title display-control">
+                        <div class="big-title ">
                             Xintong
                         </div>
-                        <div class="title-icon display-control">
+                        <div class="title-icon ">
                             <img src="img/icon_heart.svg" alt="">
                         </div>
-                        <div class="big-title display-control ">
+                        <div class="big-title ">
                             Daniel
                         </div>
                     </div>
@@ -55,7 +55,7 @@
             <div class="container">
                 <div class="row title-row">
                     <div class="col text-center ">
-                        <div class="small-title display-control">
+                        <div class="small-title ">
                             Our Story
                         </div>
                     </div>
@@ -85,7 +85,7 @@
             <div class="container">
                 <div class="row title-row">
                     <div class="col text-center">
-                        <div class="small-title display-control">
+                        <div class="small-title ">
                             The Wedding
                         </div>
                     </div>
@@ -127,7 +127,7 @@
             <div class="container">
                 <div class="row title-row">
                     <div class="col text-center ">
-                        <div class="small-title display-control">
+                        <div class="small-title ">
                             Details
                         </div>
                     </div>
@@ -184,7 +184,7 @@
             <div class="container">
                 <div class="row title-row ">
                     <div class="col text-center ">
-                        <div class="small-title display-control ">
+                        <div class="small-title  ">
                             Wedding Team
                         </div>
                     </div>
