--- a/letter1.html
+++ b/letter1.html
@@ -17,7 +17,9 @@
 <body>
     <div class="row letter">
         <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1 ">
-            <p>Haven't seen you for a few days and really miss you. This is what I wanted to share with you the evening when you gave the letter:</p>
+            <p>
+                Haven't seen you for a few days and really miss you. This is what I wanted to share with you the evening when you gave the letter:
+            </p>
             <p>
                 We had a surprise party for a dad-to-be on Core team at work. He said he was very happy and nervous about becoming a dad. He cut the cake very carefully because he tried to avoid cutting the little shoe candies on the cake. He took so many photos with the wall decorations too. Then I realized that he will probably share this experience with his wife after work. I looked at him and think that one day you will have a dad-to-be party at your office as well. I started to picture how you will share the experience with me when you come back home. Then I noticed I have tears in my eyes, I tried hard to hold them back and didn’t want my colleagues to see me crying.
             </p>
