--- a/letter2.html
+++ b/letter2.html
@@ -24,7 +24,7 @@
         </div>
         <div class="col-lg-6 col-lg-offset-3 col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1 ">
             <p>
-                <img src="img2.jpg" alt="">
+                <img src="img2.JPG" alt="">
             </p>
             <p>
                 I felt so lucky that I asked this designer for lunch and heard this story. 
